2010-11-08  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Check for z/y/zdata before converting
	negative values to NaNs. Bug fix for changeset 11201.
	* plot/daspect.m: Fix demo using both daspect and pbaspect.

2010-11-08  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Remove foreground color earlier.
	* plot/__go_draw_figure__.m: Don't set the foreground color here.

2010-11-08  Rik  <octave@nomad.inbox5.com>

	* sparse/sprand.m: Add input validation to function.

2010-11-08  Ben Abbott <bpabbott@mac.com>

	* plot/private/__bar__.m: Permit bar() to be called with scalar inputs.
	* plot/__go_draw_axes__.m, plot/axis.m: Set proper tight axis limits
	for log scale.

2010-11-07  David Bateman  <dbateman@free.fr>

	* plot/legend.m: Remove call to drawnow.

	* plot/__go_draw_axes__.m: Pass the legend axes as a structure.
	Test whether the legend axis has any children before using it.
	* plot/__go_draw_figure.m: Setup a fake axis to handle multi-parent
	legend axes and delete this fake axiss when we're done with it.
	* plot/gnuplot_drawnow.m: Don't cound legend axes when decidong if
	multiplot should be used or not.
	* plot/legend.m: Handle correctly plotyy as a multi-parented axis.
	Reuse existing legend axis if possible. Setup listeners to propagate
	changes in the lines to the legend. Setup listeners that handle the
	properties that need to legend to be recreated.
	* plot/plotyy.m: Cross-references the axes of the plotyy in the userdata
	of the axes.

2010-11-07  Konstantinos Poulios  <logari81@googlemail.com>

	* plot/colorbar.m: Make colorbar function aware of dataaspect settings.

2010-11-06  Marco Caliari <marco.caliari@univr.it>

	* polynomial/spline.m: Fit a parabola for input with 3
	elements (bug #31098).

2010-11-04  Rik  <octave@nomad.inbox5.com>

	* plot/__fltk_ginput__.m: Use semicolons to prevent internal
	  function evaluations being output to screen.

2010-11-04  Rik  <octave@nomad.inbox5.com>
