@@ -129,7 +129,13 @@ function do_contents (name)
   if (found)
     puts (__additional_help_message__ ());
   else
-    feval (missing_function_hook, name);
+    msg = feval (missing_function_hook, name);
+
+    if (isempty (msg))
+      msg = sprintf ("`%s' not found", name);
+    endif
+
+    error ("help: %s\n", msg);
   endif
 
 endfunction
